--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Specializing in open and closed cell spray foam insulation in and around the Mid-South.  
 baseurl: "" # the subpath of your site, e.g. /blog
 lang: "en"
+#url: "http://localhost:4000" # the dev hostname & protocol
 url: "https://kaytal.github.io" # the base hostname & protocol for your site
 
 
@@ -37,4 +38,4 @@ sass:
   sass_dir: assets/_sass
 
 
-images: '/assets/images'
+images: 'assets/images'
